--- a/sokoBan.html
+++ b/sokoBan.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+    <!--地图-->
     <center>
         <div id="box" class="hide">
         </div>
@@ -16,6 +17,7 @@
             <button class="next">确定</button>
         </div>
     </center>
+    <!--选择关卡-->
     <center>
         <div id="init">
             <img src="img/begin.jpg">
@@ -35,7 +37,6 @@
         </div>
     </center>
     <script src="js/jquery-3.1.1.min.js"></script>
-   
     <script src="js/index.js"></script>
 </body>
 </html>
